src/test/deca/context/invalid/class/surcharge/return_superclass.deca
// Description:
//    Héritage d'une classe
//
// Resultats:
//    Wrong return type

class A {
	B m() {}
}

class B extends A {
	A m() {}
}

{

}

